# layton-eval

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  bring_your_own_predictions.md  create_batch_requests.py  data.csv  evaluate_batch.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  style.css  technical_report.md
annotations/: llm.jsonl  vlm.jsonl
benchmark_results/: results_llm.jsonl  results_vlm.jsonl
json_schemas/: justification_schema.json
ppi/: ppi_llm.jsonl  ppi_vlm.jsonl
prompts/: justification_image.txt
prompts/benchmark/: text_riddle.txt  visual_riddle.txt
prompts/benchmark_judge/: text_riddle.txt  visual_riddle.txt
prompts/judge/: text_riddle.txt  visual_riddle.txt
prompts/judge_justification/: visual_riddle.txt
prompts/justification/: text_riddle.txt  visual_riddle.txt
scripts/: create_batch.sh  create_judge_batch.sh  create_jury_batches.sh  create_provider_batches.sh  generate_judge_raw_file.sh  generate_raw_file.sh  generate_raw_files_grid.sh  judge_batch.sh  justification_batch.sh  prepare_benchmark_batch.sh  prepare_jury_batches.sh  run_compute_jury_results.sh  test_batch.sh
src/layton_eval/: annotate_justification.py  build_ppi_dataset.py  compute_final_benchmark.py  compute_jury_results.py  get_model_performance.py  human_judge.py  repair_jsonl_file.py  scrape_htmls.py  settings.py  text_injector.py  utils.py
src/layton_eval/benchmark/: export_schema.py  generate_raw_file.py
src/layton_eval/benchmark_judge/: export_schema.py  generate_raw_file.py
src/layton_eval/judge/: export_schema.py  generate_raw_file.py
src/layton_eval/judge_justification/: generate_raw_file.py
src/layton_eval/justification/: export_schema.py  generate_raw_file.py
