[project]
name = "layton-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "batchling>=0.0.8",
    "ipykernel>=6.29.5",
    "polars>=1.24.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
