[project]
name = "layton-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "batchling==0.0.15",
    "ipykernel>=6.29.5",
    "json-repair>=0.55.0",
    "matplotlib>=3.10.7",
    "polars>=1.37.1",
    "ppi-python>=0.2.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
packages = ["src/batchling"]

[tool.bandit]
skips = ["B311"]
